========================
Django Tagging Changelog
========================


SVN Trunk Changes:
------------------

* Added a ``usage`` method to ``ModelTagManager``.

* ``TaggedItemManager``'s methods now accept a ``QuerySet`` or a
  ``Model`` class. If a ``QuerySet`` is given, it will be used as the
  basis for the ``QuerySet``s the methods return, so can be used to
  restrict results to a subset of a model's instances. The 
  `tagged_object_list`` generic view and ModelTaggedItemManager``
  manager have been updated accordingly.

* Removed ``tagging\tests\runtests.py``, as tests can be run with
  ``django-admin.py test --settings=tagging.tests.settings``.

* A ``tagging.TagDescriptor`` is now added to models when registered.
  This returns a ``tagging.managers.ModelTagManager`` when accessed on a
  model class, and provide access to and control over tags when used on
  an instance.

* Added ``tagging.register`` to register models with the tagging app.
  Initially, a ``tagging.managers.ModelTaggedItemManager`` is added for
  convenient access to tagged items.

* Moved ``TagManager`` and ``TaggedItemManager`` to ``models.py`` - gets
  rid of some import related silliness, as ``TagManager`` needs access
  to ``TaggedItem``.

Version 0.2.1, 16th Jan 2008:
-----------------------------

* Fixed a bug with space-delimited tag input handling - duplicates
  weren't being removed and the list of tag names wasn't sorted.

Version 0.2, 12th Jan 2008:
---------------------------

Packaged from revision 122 in Subversion; download at
http://django-tagging.googlecode.com/files/tagging-0.2.zip

* Added a ``tag_cloud_for_model`` template tag.

* Added a ``MAX_TAG_LENGTH`` setting.

* Multi-word tags are here - simple space-delimited input still works.
  Double quotes and/or commas are used to delineate multi- word tags.
  As far as valid tag contents - anything goes, at least initially.

* BACKWARDS-INCOMPATIBLE CHANGE - ``django.utils.get_tag_name_list`` and